clean push| day-2

--- a/project-1/app/attendance.html
+++ b/project-1/app/attendance.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="common.css">
+    <title>Home</title>
     <link rel="stylesheet" href="attendance.css">
-    <title>attendance</title>
+    <link rel="stylesheet" href="common.css">
 </head>
 <body>
     <div class="home-component">
@@ -15,45 +15,44 @@
                     <h1>ZeroOne ERP</h1>
                 </div>
                 <div class="nav-one box-one">
-                    <a href="home.html">home</a>
+                    <a href="home.html">Home</a>
                 </div>
                 <div class="nav-one box-two">
                     <a href="attendance.html">Attendance</a>
                 </div>
                 <div class="nav-one box-three">
-                    <a href="registration.html">Registrations</a>
+                    <a href="registration.html">Registration</a>
                 </div>
                 <div class="nav-one box-four">
-                    <a href="courses.html">Courses</a>
-
-
+                      <a href="courses.html">Courses</a>
                 </div>
                 <div class="nav-one box-five">
-                    <a href="comingsoon.html">Coming Soon</a>
+                   <a href="comingsoon.html">Comming soon </a>
                 </div>
-                <div class="nav-one b0x-six">
-                    <a href="comingsoon.html">Coming Soon</a>
+                <div class="nav-one box-six">
+                    <a href="comingsoon.html">Comming soon </a>
                 </div>
                 <div class="nav-one box-seven">
-                    <a href="comingsoon.html">Coming Soon</a>
+                    <a href="comingsoon.html">Comming soon </a>
                 </div>
                 <div class="nav-one box-eight">
-                    Coming Soon
+                    <a href="comingsoon.html">Comming soon </a>
                 </div>
                 <div class="nav-one box-nine">
-                    Coming Soon
+                    <a href="comingsoon.html">Comming soon </a>
                 </div>
-
             </div>
             <div class="main-container">
-                <h1>attendance</h1>
-
+                <div class="main-container-in">
+                    <h1>
+                        attendance
+                    </h1>
+                </div>
             </div>
         </div>
         <div class="footer-container">
-            <p>copy right 2023 by ZeroOne the code club all rights reserved</p>
+            <p>Copyright 2023 by ZerOne THECODECLUB. All right Reserved</p>
         </div>
     </div>
-    
 </body>
 </html>
